[project]
name = "research-template"
version = "0.1.0"
description = "A template for research projects"
authors = [{ name = "tubo213", email = "hoge@gmail.com" }]
dependencies = [
    "numpy>=1.24.5,<2",
    "joblib>=1.3.1",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "polars>=1.5.0",
    "scikit-learn>=1.3.0",
    "loguru>=0.7.2",
    "tqdm>=4.64.1",
    "seaborn>=0.13.2",
    "wandb>=0.16.6",
    "torch>=2.7.0",
    "torchvision>=0.20.1",
    "altair>=5.5.0",
    "pyarrow>=20.0.0",
    "transformers>=4.52.4",
    "einops>=0.8.1",
    "typer>=0.16.0",
    "lightning>=2.5.1.post0",
    "matplotlib-fontja>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system == 'Windows'" },
    { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "platform_system == 'Windows'" },
    { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = false
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = [
    "E501", # line too long
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 99
